Fix the responsive issues on mobile screens

--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ p {
   align-items: center;
 } */
 
+.line-break {
+  background-color: var(--mainBorderColor-dark);
+  height: 1px;
+}
+
 .link-wrapper {
   display: flex;
   align-items: center;
@@ -135,6 +140,21 @@ li {
   color: var(--secondaryTextColor-dark);
 }
 
+.about-me {
+  border-left: 1px solid var(--mainBorderColor-dark);
+  padding-left: 1.3rem;
+}
+
+.blog-posts {
+  border-left: 1px solid var(--mainBorderColor-dark);
+  padding-left: 1.3rem;
+}
+
+.my-work {
+  border-left: 1px solid var(--mainBorderColor-dark);
+  padding-left: 1.3rem;
+}
+
 /* Links  */
 
 a {
@@ -153,5 +173,12 @@ a:hover {
     width: 90%;
     flex-direction: column;
     justify-content: center;
+  }
+  .title-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1.5rem;
   }
 }
